--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,70 @@
+body{
+    background-color: darkgray;
+}
 
-/* 
+.cuerpo{
+    margin: auto;
+    min-width: 50%;
+    max-width: 50%;
+}
+.bar{
+    margin: auto;
+    width: 30px;
+    background-color: black;
+    border: 5px solid black;
+    height: 200px;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.semaforoBody{
+    margin: auto;
+    width: 150px;
+    background-color: grey;
+    border: 5px solid black;
+    height: 310px;
+    border-radius: 20px;
+}
 
-*/
+.general{
+    margin: auto;
+    width: 70%;
+    height: 100px;
+    border: 5px solid black;
+    border-radius: 50%;
+    text-align: center;
+}
+
+.intermitente{
+    margin-top: 50px;
+    text-align: center;
+    border-radius: 10px;
+}
+.intermitente button{
+    border-radius: 10px;
+    font-weight: 500;
+}
+.intermitente button:active{
+    box-shadow: 0px 0px 15px 3px green
+}
+
+/* ------------------------------------------ LUCES */
+
+.glow {
+    box-shadow: 0px 0px 22px 15px rgba(255,254,107,0.67)
+}
+
+.red {
+    background-color: red;
+}
+
+.yellow{
+    
+    background-color: yellow;
+}
+
+.green{
+    background-color: green;
+}
+
+.purple{
+    background-color: purple;
+}
